/**
 * @author Dev Problems(A Sarang Kumar Tak)
 * @YoutubeChannel https://www.youtube.com/channel/UCVno4tMHEXietE3aUTodaZQ
 */
syntax = "proto3";

option java_multiple_files = true;

package fitnlu.ntpos.grpcproto;

message UserResponse {
    bool haveUser = 1;
    bool verified = 2;
}
message UserRequest {
    string userID = 1;
}

service UserService {
    rpc getUser(stream UserRequest) returns (stream UserResponse) {}
}